--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,5 @@
-<project>
+<project name="DriverStation" default="default" basedir="."
+         xmlns:fx="javafx:com.sun.javafx.tools.ant">
     <property file="build.properties" />
 
     <target name="init">
