--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.jar
 *.war
 *.ear
+*.ini
 
 # Library jars should be included
 !lib/*.jar
@@ -16,3 +17,4 @@ hs_err_pid*
 
 reports/*
 bin/*
+.idea/*
