Test for .css support (Warning, this might break ant compile)
- Fixed .css and .png resource errors
- (Potentially) removed ant's ability to compile

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.war
 *.ear
 *.ini
+*.iml
 
 # Library jars should be included
 !lib/*.jar
@@ -18,3 +19,5 @@ hs_err_pid*
 reports/*
 bin/*
 .idea/*
+out/*
+*.iml
