Use local javafx copy, and load libraries w/ ivy

--- a/build.properties
+++ b/build.properties
@@ -4,7 +4,6 @@ sourceDir=src
 testDir=test
 outputDir=bin
 libDir=lib
+testLibDir=test/lib
 reportsDir=reports
 outputJar=DriverStation.jar
-junit=/usr/share/apache-ant/lib/junit.jar
-hamcrest=/usr/share/apache-ant/lib/hamcrest.jar
