Message code generation linked into build process

--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,13 @@
         xmlns:fx="javafx:com.sun.javafx.tools.ant">
     <property file="build.properties" />
 
+    <path id="scala.classpath">
+        <fileset dir="${scalaLibDir}">
+            <include name="*.jar"/>
+        </fileset>
+    </path>
+    <taskdef resource="scala/tools/ant/antlib.xml" classpathref="scala.classpath"/>
+
     <target name="init">
         <mkdir dir="${resourceDir}"/>
         <mkdir dir="${sourceDir}"/>
@@ -11,11 +18,13 @@
         <mkdir dir="${libDir}"/>
         <mkdir dir="${reportsDir}"/>
         <mkdir dir="${testLibDir}"/>
+        <mkdir dir="${scalaLibDir}"/>
     </target>
 
     <target name="retrieve" depends="init">
         <ivy:retrieve conf="testing" pattern="${testLibDir}/[artifact].[ext]"/>
         <ivy:retrieve conf="application" pattern="${libDir}/[artifact].[ext]"/>
+        <ivy:retrieve conf="scala" pattern="${scalaLibDir}/[artifact].[ext]"/>
     </target>
 
     <target name="clean" depends="init">
@@ -25,7 +34,7 @@
         <ivy:cleancache />
     </target>
 
-    <target name="compile" depends="init">
+    <target name="compile" depends="init,generateMessages">
         <javac srcdir="${sourceDir}" destdir="${outputDir}" extdirs="${libDir}"
                 includeantruntime="false" >
             <classpath path="${classpath}">
@@ -83,5 +92,22 @@
                 </fileset>
             </batchtest>
         </junit>
+    </target>
+
+    <target name="generateMessages">
+        <scalac srcdir="codegen" destdir="codegen" classpathref="scala.classpath">
+            <include name="*.scala"/>
+        </scalac>
+        <java dir="codegen" classname="MessageGen" fork="true" classpathref="scala.classpath">
+            <classpath>
+                <pathelement location="codegen"/>
+            </classpath>
+            <arg value="../src/VespuChat/messages/spec.xml"/>
+        </java>
+        <copy todir="src/VespuChat/messages/">
+          <fileset dir="codegen/output">
+            <include name="*.java"/>
+          </fileset>
+        </copy>
     </target>
 </project>
