--- a/build.properties
+++ b/build.properties
@@ -5,5 +5,6 @@ testDir=test
 outputDir=bin
 libDir=lib
 testLibDir=test/lib
+scalaLibDir=codegen/lib
 reportsDir=reports
 outputJar=DriverStation.jar
