fix build.xml taskdef dependency circle

--- a/build.properties
+++ b/build.properties
@@ -6,5 +6,6 @@ outputDir=bin
 libDir=lib
 testLibDir=test/lib
 scalaLibDir=codegen/lib
+codegenOutputDir=codegen/output
 reportsDir=reports
 outputJar=DriverStation.jar
