--- a/build.xml
+++ b/build.xml
@@ -91,6 +91,7 @@
 
     <uptodate property="codegen.messagesOutOfdate" targetfile="src/VespuChat/messages/spec.xml">
         <srcfiles dir= "src/VespuChat/messages" includes="*.java"/>
+        <srcfiles dir= "RobotCode/messages" includes="*.h"/>
     </uptodate>
 
     <target name="generateMessages" if="codegen.messagesOutOfdate">
@@ -113,6 +114,11 @@
         <copy todir="src/VespuChat/messages/">
           <fileset dir="codegen/output">
             <include name="*.java"/>
+          </fileset>
+        </copy>
+        <copy todir="RobotCode/messages/">
+          <fileset dir="codegen/output">
+            <include name="*.h"/>
           </fileset>
         </copy>
     </target>
