Humble Video Implementation
- Basis for Humble Video Recording setup
- Added listener for brightness slider change. Defaults to print
statement for now. Will need to implement with actual LED brightness
later.

--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,7 @@ outputDir=bin
 libDir=lib
 testLibDir=test/lib
 scalaLibDir=codegen/lib
+externLibDir=extlib
 codegenOutputDir=codegen/output
 reportsDir=reports
 outputJar=DriverStation.jar
