--- a/build.xml
+++ b/build.xml
@@ -19,6 +19,7 @@
         <ivy:retrieve conf="testing" pattern="${testLibDir}/[artifact].[ext]"/>
         <ivy:retrieve conf="application" pattern="${libDir}/[artifact].[ext]"/>
         <ivy:retrieve conf="scala" pattern="${scalaLibDir}/[artifact].[ext]"/>
+        <ivy:retrieve conf="external" pattern="${externLibDir}/[artifact].[ext]"/>
     </target>
 
     <target name="clean" depends="init">
@@ -34,6 +35,7 @@
                 includeantruntime="false" >
             <classpath path="${classpath}">
                 <file name="${java.home}\lib\ext\jfxrt.jar"/>
+                <file name="${externLibDir}\humble-video-noarch.jar"/>
             </classpath>
             <compilerarg value="-XDignore.symbol.file"/>
         </javac>
@@ -42,6 +44,25 @@
     <target name="jar" depends="compile">
         <jar destfile="${outputJar}" basedir="${outputDir}">
             <fileset dir="${resourceDir}" />
+            <!--<fileset dir="${externLibDir}" />-->
+
+
+            <!--<restrict>-->
+                <!--<name name="**/*.class"/>-->
+                <!--<archives>-->
+                    <!--<zips>-->
+                        <!--<fileset dir="${externLibDir}" >-->
+                            <!--<include name="**/*.jar"/>-->
+                            <!--<include name="**/*.dll"/>-->
+                            <!--<include name="**/*.so"/>-->
+                            <!--<include name="**/*.dylib"/>-->
+                        <!--</fileset>-->
+                    <!--</zips>-->
+                <!--</archives>-->
+            <!--</restrict>-->
+
+
+
             <zipgroupfileset dir="${libDir}">
                 <include name="*.jar"/>
             </zipgroupfileset>
@@ -54,7 +75,14 @@
 
     <target name="build" depends="jar">
         <java jar="${outputJar}" fork="true">
-            <classpath path="${classpath}"/>
+            <!--<classpath path="${classpath}"/>-->
+            <arg value="-h"/>
+            <classpath>
+                <fileset dir="${externLibDir}">
+                    <include name="**/*.jar"/>
+                </fileset>
+                <pathelement path="${java.class.path}"/>
+            </classpath>
         </java>
     </target>
 
