--- a/ivy.xml
+++ b/ivy.xml
@@ -2,11 +2,12 @@
   <info organisation="org.apache" module="dashboard"/>
   <configurations>
     <conf name="application" description="Jars used by the application"/>
+    <conf name="external" description="Jars that need to be included externally to meet signing requirements"/>
     <conf name="testing" description="Jars used for testing"/>
     <conf name="scala" description="Jars used for scala"/>
   </configurations>
   <dependencies>
-    <dependency org="org.boofcv"        name="jcodec"         rev="0.22"    conf="application->default"/>
+    <dependency org="io.humble"         name="humble-video-all" rev="0.2.1" conf="external->default"/>
     <dependency org="com.github.sarxos" name="webcam-capture" rev="0.3.11"  conf="application->default"/>
     <dependency org="org.scream3r"      name="jssc"           rev="2.8.0"   conf="application->default"/>
     <dependency org="junit"             name="junit"          rev="4.12"    conf="testing->default"/>
