--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,12 @@
 
 # Package Files #
 *.jar
+!jcodec-javase.jar
 *.war
 *.ear
 *.ini
 *.iml
+*.mp4
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
