Ivy Clean fix for Javase-JCodec Library

--- a/build.properties
+++ b/build.properties
@@ -4,6 +4,7 @@ sourceDir=src
 testDir=test
 outputDir=bin
 libDir=lib
+extDir=extlib
 testLibDir=test/lib
 scalaLibDir=codegen/lib
 codegenOutputDir=codegen/output
